# LumoRPA

./: .gitignore  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 062cd0cb-251e-4327-a99b-498c56ed66e9.json  76ac3e33-5fa2-4c3e-82b6-6ef633bf209d.json  88d5edb4-59a4-4e6d-98f4-a1326c59fa75.json  9043beb8-4ad2-4d5a-9fe3-9db1812927b7.json  ca2df308-8944-4150-a23b-37eceffe7fb2.json  d9caba1e-da00-49fd-b6bf-4852d63f0f3a.json  e777c8aa-7758-4199-b080-b486a5643e50.json  eb5c35db-4755-4447-9355-b5c1e44b6210.json
.omc/state/: agent-replay-6c73fad7-380b-42fb-b41b-6d2cc78f6da4.jsonl  agent-replay-b865feff-81cb-491e-85a0-dc988de7643f.jsonl  agent-replay-ed08b05b-b937-4c8c-be08-8ed91887438b.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-05-25T10-07-57-113Z.json  checkpoint-2026-05-26T10-03-23-443Z.json  checkpoint-2026-05-27T06-48-10-025Z.json  checkpoint-2026-05-27T08-13-12-421Z.json  checkpoint-2026-05-27T09-26-37-605Z.json  checkpoint-2026-05-27T15-58-07-030Z.json  checkpoint-2026-05-28T13-49-59-966Z.json  checkpoint-2026-05-29T00-56-33-749Z.json  checkpoint-2026-05-29T13-40-12-584Z.json  checkpoint-2026-05-29T14-39-59-854Z.json  checkpoint-2026-05-29T14-42-47-440Z.json  checkpoint-2026-05-29T15-32-50-061Z.json  checkpoint-2026-05-29T16-57-20-669Z.json  checkpoint-2026-05-30T04-05-29-959Z.json  checkpoint-2026-05-30T05-06-09-299Z.json  checkpoint-2026-05-30T07-48-11-788Z.json  checkpoint-2026-05-30T07-48-22-089Z.json  checkpoint-2026-05-30T07-48-26-631Z.json  checkpoint-2026-05-30T09-11-59-668Z.json  checkpoint-2026-05-30T09-14-48-443Z.json
.omc/state/sessions/15c7abe1-90e5-49ee-9be4-f6efb0da2708/: session-started.json
.omc/state/sessions/195ab523-5771-4765-9553-5230a708efd6/: session-started.json
.omc/state/sessions/47b9d267-0256-4913-9c50-7f165970606b/: session-started.json
.omc/state/sessions/6c73fad7-380b-42fb-b41b-6d2cc78f6da4/: session-started.json
.omc/state/sessions/ec2173bb-150f-467d-a2ae-3df81e5e944c/: session-started.json
apps/desktop/: README.md
apps/desktop/.omc/state/: idle-notif-cooldown.json
apps/desktop/frontend/: app.js  index.html  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/lumo-actions/: Cargo.toml
crates/lumo-actions/src/: archive.rs  browser.rs  clipboard.rs  control.rs  csv_ops.rs  data.rs  date_ops.rs  db_ops.rs  excel.rs  file.rs  hash_ops.rs  http.rs  json_ops.rs  lib.rs  list_ops.rs  math_ops.rs  mcp.rs  notify.rs  regex_ops.rs  selector_stats.rs  selectors.rs  string_ops.rs  system_ops.rs  table_ops.rs  vision.rs
crates/lumo-actions/tests/: archive_ops.rs  browser_teardown.rs  browser_wait.rs  clipboard_ops.rs  control_ops.rs  csv_ops.rs  data_ops.rs  date_ops.rs  db_ops.rs  excel_ops.rs  file_ops.rs  hash_ops.rs  http_download_upload.rs  http_ops.rs  json_ops.rs  list_ops.rs  math_ops.rs  notify_ops.rs  regex_ops.rs  string_ops.rs  system_ops.rs  table_ops.rs
crates/lumo-actions/tests/common/: mod.rs
crates/lumo-ai/: Cargo.toml
crates/lumo-ai/src/: action.rs  budget.rs  config.rs  cost.rs  helpers.rs  lib.rs  provider.rs  router.rs
crates/lumo-ai/tests/: cost_ledger.rs  hooks_wiring.rs  p1_5_resilience.rs  providers_wire.rs  router_smoke.rs
crates/lumo-cli/: Cargo.toml
crates/lumo-cli/src/: main.rs
crates/lumo-cli/src/cmd/: actions.rs  copilot.rs  hotkey.rs  init.rs  lint.rs  mcp.rs  mod.rs  providers.rs  run.rs  runs.rs  serve.rs  skills.rs  validate.rs  vault.rs
crates/lumo-core/: Cargo.toml
crates/lumo-core/src/: action.rs  ai_hook.rs  ctx.rs  error.rs  lib.rs  registry.rs  vm.rs
crates/lumo-core/tests/: ai_hooks.rs  cancel_timeout.rs  control_flow.rs  run_teardown.rs  vault_resolve.rs
crates/lumo-dsl/: Cargo.toml
crates/lumo-dsl/src/: ast.rs  lib.rs  lint.rs  parse.rs  template.rs  validate.rs
crates/lumo-dsl/tests/: dsl_smoke.rs
crates/lumo-recorder/: Cargo.toml
crates/lumo-recorder/src/: desktop.rs  lib.rs
crates/lumo-recorder/src/desktop/: platform.rs
crates/lumo-recorder/src/desktop/platform/: macos.rs  windows.rs
crates/lumo-skills/: Cargo.toml
crates/lumo-skills/src/: action.rs  lib.rs  loader.rs  model.rs  registry.rs
crates/lumo-storage/: Cargo.toml
crates/lumo-storage/src/: error.rs  lib.rs  repo.rs  schema.rs  types.rs  vault.rs
crates/lumo-storage/tests/: migrations.rs  storage_smoke.rs  vault.rs
docs/: 00-LumoRPA-Master-Report.md  01-Product-Design.md  02-Architecture-Design.md  03-Subsystems-Deep-Dive.md  04-优化与补充开发-路线图.md
docs/superpowers/plans/: 2026-05-30-encrypted-vault.md  2026-05-30-s-class-actions.md
docs/superpowers/specs/: 2026-05-27-yingdao-style-editor-and-ai-hooks-design.md  2026-05-30-encrypted-vault-design.md  2026-05-30-s-class-actions-design.md
examples/: browser-scrape.lumoflow.yaml  browser-scrape.lumoflow.yaml.original  dump-xlsx.lumoflow.yaml  excel-loop.lumoflow.yaml  excel-smoke.lumoflow.yaml  hello-world.lumoflow.yaml  llm-summarize-orders.lumoflow.yaml  parallel-demo.lumoflow.yaml
examples/data/: orders.xlsx
examples/skills/greet/: SKILL.md
examples/skills/json-roundtrip/: SKILL.md
scripts/: build-desktop.sh  package-cli.sh
