[workspace]
resolver = "2"
members = [
    "crates/lumo-dsl",
    "crates/lumo-storage",
    "crates/lumo-core",
    "crates/lumo-actions",
    "crates/lumo-ai",
    "crates/lumo-recorder",
    "crates/lumo-skills",
    "crates/lumo-cli",
    "apps/desktop/src-tauri",
]
default-members = ["crates/lumo-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/lumorpa/lumorpa"
homepage = "https://lumorpa.io"
authors = ["LumoRPA Contributors"]

[workspace.dependencies]
# crypto
age             = "0.11"
rpassword       = "7"

# crates
lumo-dsl       = { path = "crates/lumo-dsl",       version = "0.1.0" }
lumo-storage   = { path = "crates/lumo-storage",   version = "0.1.0" }
lumo-core      = { path = "crates/lumo-core",      version = "0.1.0" }
lumo-actions   = { path = "crates/lumo-actions",   version = "0.1.0" }
lumo-ai        = { path = "crates/lumo-ai",        version = "0.1.0" }
lumo-recorder  = { path = "crates/lumo-recorder",  version = "0.1.0" }
lumo-skills    = { path = "crates/lumo-skills",    version = "0.1.0" }

# async + runtime
tokio           = { version = "1.40", features = ["macros", "rt-multi-thread", "fs", "io-util", "io-std", "sync", "time", "process", "signal"] }
async-trait     = "0.1"
futures         = "0.3"

# serde + dsl
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
serde_yaml      = "0.9"
toml            = "0.8"
minijinja       = { version = "2.5", features = ["loader", "json"] }
schemars        = { version = "0.8", features = ["chrono", "uuid1"] }

# errors + logging
anyhow          = "1"
thiserror       = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# storage
rusqlite        = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }

# common
chrono          = { version = "0.4", features = ["serde"] }
cron            = "0.13"
notify          = { version = "6", default-features = false, features = ["macos_kqueue"] }
ulid            = { version = "1", features = ["serde"] }
sha2            = "0.10"
uuid            = { version = "1", features = ["v4", "serde"] }
dashmap         = "6"
once_cell       = "1"
parking_lot     = "0.12"

# cli
clap            = { version = "4", features = ["derive", "env"] }
indicatif       = "0.17"
colored         = "2"
comfy-table     = "7"

# http / browser / excel
reqwest         = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
axum            = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }
tower-http      = { version = "0.6", default-features = false, features = ["trace"] }
chromiumoxide   = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
calamine        = "0.26"
rust_xlsxwriter = "0.79"

# tests
pretty_assertions = "1"
tempfile        = "3"

[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
