[package]
name = "lumo-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LumoRPA command-line interface"
default-run = "lumo"

[[bin]]
name = "lumo"
path = "src/main.rs"

[dependencies]
lumo-dsl.workspace = true
lumo-storage.workspace = true
lumo-core.workspace = true
lumo-actions.workspace = true
lumo-ai.workspace = true
lumo-skills.workspace = true

tokio.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
colored.workspace = true
comfy-table.workspace = true
indicatif.workspace = true
chrono.workspace = true
axum.workspace = true
tower-http.workspace = true
cron = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }

[features]
default = ["hotkey-rdev"]
# T-05: real global hotkey backend via `rdev`. Opt-out to skip the heavier
# native deps (Linux: libxdo / libudev; macOS: Carbon main-thread quirks).
# When disabled the listener is a permissive stub that scans + registers
# hotkeys but never fires — useful for headless CI.
hotkey-rdev = ["dep:rdev"]

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
rdev = { version = "0.5", optional = true }
