[package]
name = "lumo-dsl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LumoRPA Flow DSL: parse, validate, AST"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
minijinja.workspace = true
schemars.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
