[package]
name = "lumo-recorder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LumoRPA recorder (placeholder; impl in M2)"

[dependencies]
lumo-core.workspace = true
lumo-dsl.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
