[package]
name = "lumorpa-desktop"
version.workspace = true
description = "LumoRPA desktop workbench"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "lumorpa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
lumo-actions.workspace = true
lumo-ai.workspace = true
lumo-core.workspace = true
lumo-dsl.workspace = true
lumo-recorder.workspace = true
lumo-skills.workspace = true
lumo-storage.workspace = true
anyhow.workspace = true
base64 = "0.22"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tauri = { version = "2.3.1", features = ["macos-private-api"] }
tokio.workspace = true

